--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,5 +6,9 @@
     <true/>
     <key>UIFileSharingEnabled</key>
     <true/>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app needs access to save screenshots to your photo library</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs access to save screenshots to your photo library</string>
 </dict>
 </plist> 
