feat: Complete package cleanup and formatting
- Removed all centurycity and jay_benzatine references
- Updated package names to generic com.flutter_long_screenshot
- Fixed Dart formatting issues with dart format
- Updated iOS bundle identifiers
- Cleaned build artifacts
- All static analysis passes with no errors or warnings
- Ready for pub.dev publication

Version: 1.0.1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.centurycity.flutter_long_screenshot
+        package: com.flutter_long_screenshot
         pluginClass: FlutterLongScreenshotPlugin
       ios:
         pluginClass: FlutterLongScreenshotPlugin
