--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group = "com.centurycity.flutter_long_screenshot"
+group = "com.flutter_long_screenshot"
 version = "1.0-SNAPSHOT"
 
 buildscript {
@@ -25,7 +25,7 @@ apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
 android {
-    namespace = "com.centurycity.flutter_long_screenshot"
+    namespace = "com.flutter_long_screenshot"
     compileSdk = 35
 
     compileOptions {
