--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.centurycity.flutter_long_screenshot_example"
+    namespace = "com.flutter_long_screenshot_example"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = "26.3.11579264"
 
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.centurycity.flutter_long_screenshot_example"
+        applicationId = "com.flutter_long_screenshot_example"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
